--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <meta property="og:url"                content="https://azertypow.github.io/head.project.adface/" />
       <meta property="og:type"               content="article" />
       <meta property="og:title"              content="adFace" />
-      <meta property="og:description"        content="head web application" />
+      <meta property="og:description"        content="analytic scanning profile" />
       <meta property="og:image"              content="" />
   </head>
   <body>
