feat: import final adds

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
 
-      <meta property="og:url"                content="https://azertypow.github.io/head.project.adface/" />
+      <meta property="og:url"                content="<%= BASE_URL %>" />
       <meta property="og:type"               content="article" />
       <meta property="og:title"              content="adFace" />
       <meta property="og:description"        content="analytic scanning profile" />
