fix: tweet, ogimg and link correction, ADface typo, marta timing

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 
       <meta property="og:url"                content="<%= BASE_URL %>" />
       <meta property="og:type"               content="article" />
-      <meta property="og:title"              content="adFace" />
+      <meta property="og:title"              content="ADface" />
       <meta property="og:description"        content="analytic scanning profile" />
-      <meta property="og:image"              content="" />
+      <meta property="og:image"              content="<%= BASE_URL %>/img/preview_share_profile.png" />
   </head>
   <body>
     <noscript>
